# 180-to-peking

./: pyproject.toml
day_1/: 01.py  02.py  04.py  bmi.py  bmi_answer.py
day_2/: 01.py  01_prof.py  01_review.py  bmi_data.json
day_3/: 01.py
